Remove db access
